MyDevOrg/src/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>ActualSprintCompletionDate__c</fullName>
        <label>Actual Sprint Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_start_date__c</fullName>
        <label>Sprint start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Synopsis__c</fullName>
        <label>Synopsis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TargetSprintCompletionDate__c</fullName>
        <label>Target Sprint Completion Date</label>
        <type>Date</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>